--- a/LoginSystem/package.json
+++ b/LoginSystem/package.json
@@ -14,9 +14,14 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "express-session": "^1.17.3"
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "uuid": "^8.3.2"
   }
 }
